# graphed-debug-mvp

./: CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.graphed/: state.json
.graphed/M0/: attempts.md
.graphed/M37/: attempts.md  decompose.md
.graphed/M6/: attempts.md
docs/: api.rst  conf.py  design.rst  improvements.rst  index.rst
scripts/: advance.py
src/graphed_debug/: __init__.py  _sampler.py  dashboard.py  errors.py  lowering.py  runner.py  tracebacks.py  viz.py
src/graphed_debug/dashboard/: __init__.py  _client.py  _dashboard.py  _server.py  _wire.py
src/graphed_debug/dashboard/static/: index.html
src/graphed_debug/static/: app.js  index.html
tests/frozen/m37/: test_dashboard.py  test_dashboard_browser.py  test_dashboard_error_panel.py  test_dashboard_lifecycle.py  test_dashboard_monitor.py  test_dashboard_profile.py  test_dashboard_sse.py  test_flame_adapter.py
tests/frozen/m6/: analyses.py  test_awkward_mass.py  test_lowering.py  test_process_boundary.py  test_runner.py  test_stage_error.py  test_topologies.py  test_traceback.py  test_visualize.py
tools/dashboard-build/: .gitignore  build.mjs  entry.mjs  package-lock.json  package.json
