[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphed-debug"
version = "0.0.1"
description = "graphed M6: opt-level lowering, source-mapped picklable tracebacks, visualization"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "graphed-org" }]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
# graphed + graphed-core are installed from their repos (see CI / CONTRIBUTING); not on PyPI yet.
dependencies = ["graphed", "graphed-core"]

[project.optional-dependencies]
# M37: the live dashboard. Perspective tables served over Tornado (browser viewer + event ingest);
# websocket-client is the executor-side network transport. The profiler is an off-thread
# sys._current_frames sampler living in pure stdlib (graphed_debug._sampler) — NO third-party
# profiler dependency (it samples the worker's task thread from a daemon thread, so it adds ~nothing
# to the data path; the dashboard renders its merged stack tree as a d3 flamegraph, vendored client-
# side). perspective-python is PINNED to 4.5.1: the browser client (the single self-contained bundle
# under dashboard/static/vendor, produced by tools/dashboard-build) shares a versioned wire protocol
# with the server, so the two MUST match exactly. Bump this pin and the bundle's package.json
# together, then rebuild (see static/vendor/README.md). A heavier OPT-IN extra: 4.5.1 ships cp311-abi3
# wheels for macOS (arm64+x86_64), linux (x86_64+aarch64), and Windows (installs on 3.11-3.14) but NOT
# free-threaded 3.14t — there the dashboard tests importorskip it and the core stays pure-Python.
dashboard = [
  "perspective-python==4.5.1",
  "tornado>=6.2",
  "websocket-client>=1.6",
]
# the backends + corpus are only needed to exercise realistic analyses in the test-suite. The
# dashboard stack is NOT here: it is the `dashboard` extra (perspective-python has no free-threaded
# wheel), installed alongside dev on the platforms that support it (CI installs `.[dev,dashboard]`).
dev = [
  "pytest",
  "pytest-cov",
  "hypothesis",
  "mypy",
  "ruff",
  "graphed-numpy",
  "graphed-awkward",
  "graphed-corpus",
  "numpy>=1.24",
  "awkward>=2.6",
]
docs = ["sphinx", "furo"]

[project.urls]
Homepage = "https://github.com/graphed-org/graphed-debug-mvp"

[tool.hatch.build.targets.wheel]
packages = ["src/graphed_debug"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests/frozen/m6"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["graphed_debug"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 110
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF", "PLC0415"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

# awkward/numpy are untyped at the array-interop boundary; only exercised in tests anyway.
# The M37 dashboard extra (perspective/tornado/websocket) ships no type stubs.
[[tool.mypy.overrides]]
module = [
  "awkward.*",
  "numpy.*",
  "graphed_awkward.*",
  "graphed_numpy.*",
  "graphed_corpus.*",
  "perspective.*",
  "tornado.*",
  "websocket.*",
]
ignore_missing_imports = true
follow_imports = "skip"
